manifests/homelab/mediastack/bazarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bazarr
  namespace: homelab
  labels:
    app.kubernetes.io/name: bazarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: bazarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: bazarr
    spec:
      automountServiceAccountToken: false
      containers:
      - name: bazarr
        image: linuxserver/bazarr:v0.9.9-ls131
        securityContext:
          readOnlyRootFilesystem: true
          capabilities:
            drop: 
            - CAP_NET_RAW
        ports:
        - containerPort: 6767
          name: webint
        volumeMounts:
        - name: data
          mountPath: /config
        - name: movies
          mountPath: /movies
        - name: tvshows
          mountPath: /tv
        - name: var-run-s6
          mountPath: /var/run/s6
        - name: etc
          mountPath: /etc
        - name: defaults
          mountPath: /defaults
        - name: app
          mountPath: /app
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: bazarr-data
      - name: movies
        persistentVolumeClaim:
          claimName: bazarr-movies
      - name: tvshows
        persistentVolumeClaim: 
          claimName: bazarr-tvshows
      - name: var-run-s6
        emptyDir: {}
      - name: etc
        emptyDir: {}
      - name: defaults
        emptyDir: {}
      - name: app
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  namespace: homelab
  name: bazarr
spec:
  selector:
    app.kubernetes.io/name: bazarr
  ports:
  - protocol: TCP
    name: webint
    port: 6767
    targetPort: 6767
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bazarr
  namespace: homelab
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/whitelist-source-range: 10.10.0.0/16
    nginx.ingress.kubernetes.io/proxy-body-size: 150m
    cert-manager.io/cluster-issuer: letsencrypt-array21

spec:
  tls:
  - hosts:
    - bazarr.k8s.array21.dev
    secretName: bazarr-k8s-array21-dev
  rules:
  - host: bazarr.k8s.array21.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bazarr
            port:
              number: 6767
