manifests/homelab/mediastack/jackett.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: homelab
  name: jackett
  labels:
    app.kubernetes.io/name: jackett
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: jackett
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jackett
    spec:
      automountServiceAccountToken: false
      containers:
      - name: jackett
        image: linuxserver/jackett:v0.18.925-ls47
        securityContext:
          capabilities:
            drop:
            - CAP_NET_RAW
        ports:
        - containerPort: 9117
        volumeMounts:
        - name: data
          mountPath: /config
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: jackett-data
---
apiVersion: v1
kind: Service
metadata:
  namespace: homelab
  name: jackett
spec:
  selector:
    app.kubernetes.io/name: jackett
  ports:
  - protocol: TCP
    port: 9117
    targetPort: 9117
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jackett
  namespace: homelab
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/whitelist-source-range: 10.10.0.0/16
    nginx.ingress.kubernetes.io/proxy-body-size: 150m
    cert-manager.io/cluster-issuer: letsencrypt-array21
spec:
  tls:
  - hosts:
    - jackett.k8s.array21.dev
    secretName: jacket-k8s-array21-dev
  rules:
  - host: jackett.k8s.array21.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jackett
            port:
              number: 9117
