manifests/homelab/mediastack/lidarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lidarr
  namespace: homelab
  labels:
    app.kubernetes.io/name: lidarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: lidarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: lidarr
    spec:
      automountServiceAccountToken: false
      containers:
      - name: lidarr
        image: linuxserver/lidarr:0.8.1.2135-ls63
        securityContext:
          readOnlyRootFilesystem: true
          capabilities:
            drop:
            - CAP_NET_RAW
        ports:
        - containerPort: 8686
        volumeMounts:
        - name: data
          mountPath: /config
        - name: transmission
          mountPath: /data/completed/
        - name: music
          mountPath: /music
        - name: var-run-s6
          mountPath: /var/run/s6
        - name: etc
          mountPath: /etc
        - name: defaults
          mountPath: /defaults
        - name: app
          mountPath: /app
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: lidarr-data
      - name: transmission
        persistentVolumeClaim:
          claimName: lidarr-transmission
      - name: music
        persistentVolumeClaim: 
          claimName: lidarr-music
      - name: var-run-s6
        emptyDir: {}
      - name: etc
        emptyDir: {}
      - name: defaults
        emptyDir: {}
      - name: app
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: lidarr
  namespace: homelab
spec:
  selector:
    app.kubernetes.io/name: lidarr
  ports:
  - protocol: TCP
    port: 8686
    targetPort: 8686
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lidarr
  namespace: homelab
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/whitelist-source-range: 10.10.0.0/16
    nginx.ingress.kubernetes.io/proxy-body-size: 150m
    cert-manager.io/cluster-issuer: letsencrypt-array21

spec:
  tls:
  - hosts:
    - lidarr.k8s.array21.dev
    secretName: lidarr-k8s-array21-dev
  rules:
  - host: lidarr.k8s.array21.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lidarr
            port:
              number: 8686
