manifests/homelab/mediastack/radarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: homelab
  labels:
    app.kubernetes.io/name: radarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: radarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: radarr
    spec:
      automountServiceAccountToken: false
      containers:
      - name: radarr
        image: linuxserver/radarr
        ports:
        - containerPort: 7878
        volumeMounts:
        - name: data
          mountPath: /config
        - name: transmission
          mountPath: /data/completed/
        - name: movies
          mountPath: /movies
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: radarr-data
      - name: transmission
        persistentVolumeClaim:
          claimName: radarr-transmission
      - name: movies
        persistentVolumeClaim: 
          claimName: radarr-movies 
---
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: homelab
spec:
  selector:
    app.kubernetes.io/name: radarr
  ports:
  - protocol: TCP
    port: 7878
    targetPort: 7878
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr
  namespace: homelab
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/whitelist-source-range: 10.10.0.0/16
    nginx.ingress.kubernetes.io/proxy-body-size: 150m
    cert-manager.io/cluster-issuer: letsencrypt-array21
spec:
  tls:
  - hosts:
    - radarr.k8s.array21.dev
    secretName: radarr-k8s-array21-dev
  rules:
  - host: radarr.k8s.array21.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: radarr
            port:
              number: 7878
