manifests/homelab/mediastack/sonarr.yaml
#Deployment. Sonarr container
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  labels:
    app: sonarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
      - name: sonarr
        image: 'linuxserver/sonarr:latest'
        ports:
        - containerPort: 8989
          name: webint
        volumeMounts:
        - name: sonarr-config
          mountPath: /config
        - name: transmission-storage
          mountPath: /data/completed/
        - name: tvshow-storage
          mountPath: /tv
      volumes:
      - name: sonarr-config
        persistentVolumeClaim:
          claimName: sonarr-config
      - name: transmission-storage
        persistentVolumeClaim:
          claimName: transmission-sonarr-storage
      - name: tvshow-storage
        persistentVolumeClaim: 
          claimName: tvshow-sonarr-storage
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr
spec:
  selector:
    app: sonarr
  ports:
  #Webinterface
  - protocol: TCP
    name: webint
    port: 8989
    targetPort: 8989
---
#Ingress resource. Picked up by the NGINX ingress controller
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr-ingress
  annotations:
    kubernets.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/whitelist-source-range: 85.144.63.138,192.168.1.0/24
    nginx.ingress.kubernetes.io/proxy-body-size: 150m

spec:
  tls:
  - hosts:
    - sonarr.k8s.array21.dev
    secretName: array21-tls
  rules:
  - host: sonarr.k8s.array21.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sonarr
            port:
              number: 8989
